--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
-        <title>ｍマウント合戦</title>
+        <meta name=“viewport” content=“width=device-width”>
+        
+        <title>マウント合戦</title>
         <style>
             /*CSSのエリア*/
 
