--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
             /* iphone 縦*/
             
-            @media screen and (max-width:568px){
-                /* スマホ用*/
+            @media screen and(min-width:1242px){
+                /* iphone xsmax用*/
                 main{
                 font-family: 'GlimChe','Hiragino Mincho Pro','New Gulim';
                 font-size: small;
@@ -18,8 +18,8 @@
                 }
             }
 
-            @media screen and(min-width:569px)and(max-width:768px){
-                /* for iPad */
+            @media screen and(min-width:1243px)and(max-width:1640px){
+                /* for iPad Air4世代 */
                 main{
                 font-family: 'GlimChe','Hiragino Mincho Pro','New Gulim';
                 font-size: medium;
@@ -27,7 +27,7 @@
                 }
             }
             
-            @media screen and(min-width:769px){
+            @media screen and(min-width:1641px){
                 /*for PC*/
                  main{
                 font-family: 'GlimChe','Hiragino Mincho Pro','New Gulim';
