--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
             /* iphone 縦*/
             
-            @media screen and(min-width:414px){
+            @media screen and(max-width:414px){
                 /* iphone xsmax用*/
                 main{
                 font-family: 'GlimChe','Hiragino Mincho Pro','New Gulim';
