--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 main{
                 font-family: 'GlimChe','Hiragino Mincho Pro','New Gulim';
                 font-size: small;
+                font-color:red;
                 background-color: yellowgreen;
                 }
             }
@@ -23,6 +24,7 @@
                 main{
                 font-family: 'GlimChe','Hiragino Mincho Pro','New Gulim';
                 font-size: medium;
+                font-color:blue;
                 background-color: red;
                 }
             }
@@ -32,6 +34,7 @@
                  main{
                 font-family: 'GlimChe','Hiragino Mincho Pro','New Gulim';
                 font-size: large;
+                font-color:green;
                 background-color: pink;
                 }
             }
