--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
             /* iphone 縦*/
             
-            @media screen and(max-width:1242px){
+            @media screen and(min-width:1242px){
                 /* iphone xsmax用*/
 
                 body{
