--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 }
             }
 
-            @media screen and(min-width:415px)and(max-width:820px){
+            @media screen and(max-width:820px){
                 /* for iPad Air4世代 */
                 
                 body{
@@ -33,7 +33,7 @@
                 }
             }
             
-            @media screen and(min-width:821px){
+            @media screen and(max-width:2000px){
                 /*for PC*/
                  body{
                 background-color: pink;
