--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <title>マウント合戦</title>
         <style>
             /*CSSのエリア*/
+            
+            body{
+                background-cokor:blue;
+            }
 
             /* iphone 縦*/
             
