--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             @media screen and(max-width:414px){
                 /* iphone xsmax用*/
 
-                main{
+                body{
                 background-color: yellowgreen;
                 }
                 p{
@@ -19,10 +19,10 @@
                 }
             }
 
-            @media screen and(max-width:820px){
+            @media screen and(min-width:415px)and(max-width:820px){
                 /* for iPad Air4世代 */
                 
-                main{
+                body{
                 background-color: red;   
                 }
                 p{
@@ -31,9 +31,9 @@
                 }
             }
             
-            @media screen and(max-width:2000px){
+            @media screen and(min-width:821px){
                 /*for PC*/
-                 main{
+                 body{
                 background-color: pink;
                 }
                 p{
