--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 background-color: yellowgreen;
                 }
                 p{
-                font-size: small;color:black;
+                font-size: small;color:green;
                 font-family: 'GlimChe','Hiragino Mincho Pro','New Gulim';
                 }
             }
