--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
             @media screen and(max-width:414px){
                 /* iphone xsmax用*/
 
-                body{
-                background-color: yellowgreen;
-                }
+                body{background: yellowgreen;}
                 p{
                 font-size: small;color:green;
                 font-family: 'GlimChe','Hiragino Mincho Pro','New Gulim';
@@ -22,9 +20,7 @@
             @media screen and(min-width:415px)and(max-width:820px){
                 /* for iPad Air4世代 */
                 
-                body{
-                background-color: red;   
-                }
+                body{background: red;}
                 p{
                 font-family: 'GlimChe','Hiragino Mincho Pro','New Gulim';
                 font-size: medium; color:white;
@@ -33,9 +29,7 @@
             
             @media screen and(min-width:821px){
                 /*for PC*/
-                 body{
-                background-color: pink;
-                }
+                body{background-color: pink;}
                 p{
                 font-family: 'GlimChe','Hiragino Mincho Pro','New Gulim';
                 font-size: large; color:red;
