--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             @media screen and(min-width:1px)and(max-width:414px){
                 /* iphone xsmax用*/
 
-                main{
-                    background-color: rgb(50, 205, 109);
+                .body{
+                background-color: rgb(50, 205, 109);
                 }
                 p{
                 font-size: small; color:rgb(0, 30, 128);
@@ -22,7 +22,7 @@
             @media screen and(min-width:415px)and(max-width:820px){
                 /* for iPad Air4世代 */
                 
-                main{
+                .body{
                     background-color: rgb(0, 183, 255);
                 }
                 p{
@@ -32,7 +32,7 @@
             
             @media screen and(min-width:821px){
                 /*for PC*/
-                main{
+                .body{
                     background-color: rgb(253, 128, 149);
                 }
                 p{
