--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             @media screen and(min-width:1px)and(max-width:414px){
                 /* iphone xsmax用*/
 
-                .body{
+                body{
                 background-color: rgb(50, 205, 109);
                 }
                 p{
@@ -22,7 +22,7 @@
             @media screen and(min-width:415px)and(max-width:820px){
                 /* for iPad Air4世代 */
                 
-                .body{
+                body{
                     background-color: rgb(0, 183, 255);
                 }
                 p{
@@ -32,7 +32,7 @@
             
             @media screen and(min-width:821px){
                 /*for PC*/
-                .body{
+                body{
                     background-color: rgb(253, 128, 149);
                 }
                 p{
