--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             @media screen and(min-width:1px)and(max-width:414px){
                 /* iphone xsmax用*/
 
-                .box{
+                #box{
                 background-color: rgb(50, 205, 109);
                 font-size:small;
                 }
@@ -20,7 +20,7 @@
             @media screen and(min-width:415px)and(max-width:820px){
                 /* for iPad Air4世代 */
                 
-                .box{
+                #box{
                     background-color: rgb(0, 183, 255);
                     font-size: medium;
                 }
@@ -28,7 +28,7 @@
             
             @media screen and(min-width:821px){
                 /*for PC*/
-                .box{
+                #box{
                     background-color: rgb(253, 128, 149);
                     font-size: large;
                 }
