--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
                 /* iphone xsmax用*/
 
                 #box{
+                width:auto;
+                height:auto;
                 background-color: rgb(50, 205, 109);
                 font-size:small;
                 }
@@ -21,6 +23,8 @@
                 /* for iPad Air4世代 */
                 
                 #box{
+                    width:auto;
+                    height:auto;
                     background-color: rgb(0, 183, 255);
                     font-size: medium;
                 }
@@ -29,6 +33,8 @@
             @media screen and(min-width:821px){
                 /*for PC*/
                 #box{
+                    width:auto;
+                    height:auto;
                     background-color: rgb(253, 128, 149);
                     font-size: large;
                 }
