--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <body>
         <!---コンテンツのエリア-->
         
-        <p id="box">
+        <p id="box"></p>
         <p>たかし：こんにちは。今日は良い天気ですね。</p>
         <p>まさし：こんにちは。本当ですね。少し暑すぎるくらいです。</p>
         <p>ひさし：このくらいで暑いだなんて…。僕は昔インドのデリーに住んでいたことがあるんだけど、あそこの夏は死ぬほど暑いんだ。４０度超える日もあるんだよ。</p>
@@ -62,7 +62,6 @@
          <p>たかし：え、そうなの？</p>
          <p>まさし：確かに僕のお父さんはお金持ちだと思うけど、僕は自分のお金で世界旅行を叶えたいんだ。その方がワクワクするでしょ？</p>
          <p>ひさし：まさし君は凄いな。</p>
-        </p>
         
 
     <script>
