--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 /* iphone xsmax用*/
 
                 #box{
-                width:414px;
+                width:100%;
                 height:auto;
                 background-color: rgb(50, 205, 109);
                 font-size:small;
@@ -23,7 +23,7 @@
                 /* for iPad Air4世代 */
                 
                 #box{
-                    width:820px;
+                    width:100%;
                     height:auto;
                     background-color: rgb(0, 183, 255);
                     font-size: medium;
@@ -33,8 +33,7 @@
             @media screen and (min-width:821px){
                 /*for PC*/
                 #box{
-                    min-width:821;
-                    width:auto;
+                    width:100%;
                     height:auto;
                     background-color: rgb(253, 128, 149);
                     font-size: large;
