--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <style>
             /*CSSのエリア*/
             
-            @media screen and (min-width:1px) and (max-width:414px){
+            @media screen and (max-width:414px){
                 /* iphone xsmax用*/
                 body{
                     background-color: aqua;
