--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 }
             }
             
-            @media screen  (min-width:821px){
+            @media screen and (min-width:821px){
                 /*for PC*/
                 body{
                     background-color:greenyellow;
