--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 }
             }
 
-            @media screen and (min-width:415px) and (max-width:820px){
+            @media screen and  (max-width:820px){
                 /* for iPad Air4世代 */
                  body{
                     background-color:salmon;
